Migliorata struttura html e css

--- a/index.html
+++ b/index.html
@@ -8,34 +8,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="main-cont">
-    <!-- parte header -->
-    <header></header>
-    <!-- /parte header -->
-    <!-- parte main  -->
-    <main>
-        <!-- sezione prima parte  -->
-        <section>
-            <div class="cont yellow"></div>
-        </section>
-        <!-- /sezione prima parte  -->
-        <!-- sezione seconda parte  -->
-        <section>
-            <div class="cont blue">
-                <div class="cont-top cyan"></div>
-                <div class="cont-float">
-                    <div class="cont-left cyan"></div>
-                    <div class="cont-middle cyan"></div>
-                    <div class="cont-right cyan"></div>
-                </div> 
-            </div>
-        </section>
-        <!-- /sezione seconda parte  -->
-    </main>
-    <!-- /parte main  -->
-    <!-- parte footer  -->
-    <footer></footer>
-    <!-- /parte footer  -->
+    <div class="contenitore">
+        <!-- parte header -->
+        <header></header>
+        <!-- /parte header -->
+        <!-- parte main  -->
+        <main>
+                <!-- sezione prima parte  -->
+                <section class="hero"></section>
+                <!-- /sezione prima parte  -->
+                <!-- sezione seconda parte  -->
+                <section class="leadership">
+                    <div class="cont-top"></div>
+                    <div class="clearfix">
+                        <div class="col"></div>
+                        <div class="col col-middle"></div>
+                        <div class="col"></div>
+                    </div>
+                </section>
+            <!-- /sezione seconda parte  -->
+        </main>
+        <!-- /parte main  -->
+        <!-- parte footer  -->
+        <footer></footer>
+        <!-- /parte footer  -->
     </div>
 </body>
 </html>
