--- a/index.html
+++ b/index.html
@@ -5,12 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WP</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="contenitore">
         <!-- parte header -->
-        <header></header>
+        <header>
+            <img id="img-logo" src="img/logo.png" alt="Logo">
+            <!-- nav bar  -->
+            <ul>
+                <li>
+                    <a href="#">FEATURES</a>
+                </li>
+                <li>
+                    <a href="#">EDITORIALS</a>
+                </li>
+                <li>
+                    <a href="#">ENVIROMENT</a>
+                </li>
+                <li>
+                    <a href="#">BLOG</a>
+                </li>
+                <li>
+                    <a href="#">SHOP</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+            <!-- /nav bar  -->
+        </header>
         <!-- /parte header -->
         <!-- parte main  -->
         <main>
