Completata prima sezione

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         <!-- parte main  -->
         <main>
                 <!-- sezione prima parte  -->
-                <section class="hero"></section>
+                <section class="hero rounded-corner">
+                    <div>
+                        <h2>Pretium ac placerat dui interdum nunc in eros urna morbi</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, explicabo! Tenetur quos, dolorem sint numquam ipsa hic nostrum!</p>
+                    </div>
+                </section>
                 <!-- /sezione prima parte  -->
                 <!-- sezione seconda parte  -->
                 <section class="leadership">
