--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="contenitore">
         <!-- parte header -->
         <header>
-            <img id="img-logo" class="margin-bottom" src="img/logo.png" alt="Logo">
+            <img id="img-logo" class="mar-bot" src="img/logo.png" alt="Logo">
             <!-- nav bar  -->
-            <ul class="margin-bottom">
+            <ul class="mar-bot">
                 <li>
                     <a href="#">FEATURES</a>
                 </li>
@@ -42,7 +42,7 @@
         <!-- parte main  -->
         <main>
                 <!-- sezione prima parte  -->
-                <section class="hero rounded-corner margin-bottom">
+                <section class="hero radius mar-bot">
                     <div>
                         <h2>Pretium ac placerat dui interdum nunc in eros urna morbi</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, explicabo! Tenetur quos, dolorem sint numquam ipsa hic nostrum!</p>
@@ -50,24 +50,30 @@
                 </section>
                 <!-- /sezione prima parte  -->
                 <!-- sezione seconda parte  -->
-                <section class="leadership margin-bottom">
-                    <div class="cont-top margin-bottom">
+                <section class="mar-bot">
+                    <div class="mar-bot">
                         <h1>Leadership</h1>
                         <span>Fertenum urna a libero temous</span>
                     </div>
                     <div class="clearfix">
                         <div class="col">
-                            <img class="rounded-corner img-col" src="img/img-1.jpg" alt="immagine">
+                            <div class="cont-img radius">
+                                <img class="radius img-col" src="img/img-1.jpg" alt="immagine">
+                            </div>
                             <h3>Lorem</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic architecto quaerat laboriosam facilis commodi velit at corrupti pariatur. Dolore minima voluptatum ex dignissimos esse pariatur facilis adipisci libero aliquid nulla!</p>
                         </div>
                         <div class="col col-middle">
-                            <img class="rounded-corner img-col"src="img/banner-2.jpg" alt="immagine">
+                            <div class="cont-img radius">
+                                <img class="rounded-corner img-col"src="img/banner-2.jpg" alt="immagine">
+                            </div>
                             <h3>Ipsum</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates quo impedit cupiditate reiciendis sunt earum aspernatur rem, eaque ut, at repellat? Nulla iusto obcaecati maiores blanditiis commodi sequi dolores! Lorem ipsum dolor sit amet consectetur adipisicing elit. In doloribus nam id delectus, sapiente nisi sed eveniet, neque recusandae laboriosam consequuntur cumque quisquam dolor architecto, ipsum vero iure quidem cupiditate? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab deserunt, consequuntur aspernatur minima asperiores mollitia itaque officiis tempora porro quos in alias, nihil exercitationem dolorum possimus, error excepturi! Fugiat, id? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione animi laudantium repellat. Nulla odit non quas, a nobis distinctio. Eius qui repudiandae deleniti a sed tenetur voluptatibus dolorum vitae voluptatem.</p>
                         </div>
                         <div class="col">
-                            <img class="rounded-corner img-col"src="img/img-3.jpg" alt="immagine">
+                            <div class="cont-img radius">
+                                <img class="radius img-col"src="img/img-3.jpg" alt="immagine">
+                            </div>
                             <h3>Lorem</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic architecto quaerat laboriosam facilis commodi velit at corrupti pariatur. Dolore minima voluptatum ex dignissimos esse pariatur facilis adipisci libero aliquid nulla!</p>
                         </div>
@@ -77,7 +83,9 @@
         </main>
         <!-- /parte main  -->
         <!-- parte footer  -->
-        <footer>
+        <footer class="mar-bot">
+            <span>Designed with </span> 
+            <span class="heart">&#9829;</span>
         </footer>
         <!-- /parte footer  -->
     </div>
